# void-physics

./: .gitignore  .gitmodules  AUTHORS  Dockerfile  README.md  Untitled.md  main.py  package-lock.json  package.json  pyproject.toml  unidenticality-principal-as-foundation.md
DEFINING/: concept-of-pressures-and-stretching-by-space.md  electromagnetic-waves-shiftings.md  event-exceptions-handlers.md  event-sort-algorithm.md  final-obsolete-notation-state-theory.md  gravitational-tentions-in-space.md  morphic-equations.md  negative-dimensional-time-passing.md  processing-tactspeed.md  quantum-forces-of-eventing-solvability.md  relational-approach.md  spatial-notation-methods-proposals.md  subiective-resistance-of-space-solving.md  the-axiom-of-basetyping.md  theory-of-redunctional-shring-factors.md  turing-complete-cosmos.md
RELATIVENESS/: gravitational-tentions.md
changelogs/chapters/: sticknote2.md  stickynote.13.md  stickynote6.md  stickynotes9.md  sticnote7.md
changelogs/related-notes/: teoria-istnienia-dowodu-występowania__forma-z-2022.md
config/: formulator.json
dev-tools/: after-clone.sh  publish.sh
docs/lang.pl-PL/: Aksjomat Sarverott'a.md  Dogmat Technomantycznej Matematyki.md  Fatalistyczna hipoteza komplementaryczności zapisu jednowzorowego zrealizowanego wzoru na Absolut.md  formuła na wirtualizację.md  (+7 more)
related-notes/: README.draft.md  conversation-about-darkpoint-idea-long-term-memory-from-human-mind-reproduction-to-code.md  conversation-from-chatgpt-birthday.md  devlog.txt
src/: main.js
src/root/: void.js  (+13 more)
tools/: dependascript.sh  py-init.py
(+15 files in other folders)
