[project]
name = "void-physics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "chromadb>=1.5.2",
    "datasets>=4.6.1",
    "gitpython>=3.1.46",
    "libretranslatepy>=2.1.4",
    "marimo>=0.20.4",
    "markdown>=3.10.2",
    "matplotlib>=3.10.8",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pygithub>=2.8.1",
    "pytoml>=0.1.21",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
    "transformers>=5.3.0",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "anthropic>=0.84.0",
    "docker>=7.1.0",
    "google-genai>=1.66.0",
    "huggingface-hub>=1.5.0",
    "litellm>=1.82.0",
    "mcp[cli]>=1.26.0",
    "openai>=2.24.0",
    "xai-sdk>=1.7.0",
]
